# CrewAI_Project_1

./: pyproject.toml
src/app1/: ai_tools.py  main.py
